intel/bench_214_new/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/log.txt
bench_214_new/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:54:20: error: use of undeclared identifier 'NULL'
                track->aa.robj = NULL;
                                 ^
bench_214_new/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:58:23: error: use of undeclared identifier 'NULL'
                track->cb[i].robj = NULL;
                                    ^
bench_214_new/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:64:19: error: use of undeclared identifier 'NULL'
        track->zb.robj = NULL;
                         ^
bench_214_new/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:73:27: error: use of undeclared identifier 'NULL'
                track->arrays[i].robj = NULL;
                                        ^
bench_214_new/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:92:29: error: use of undeclared identifier 'NULL'
                track->textures[i].robj = NULL;
                                          ^
bench_214_new/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:100:47: error: use of undeclared identifier 'NULL'
                                track->textures[i].cube_info[face].robj = NULL;
                                                                          ^
6 errors generated.
HLS FPGA Parse FAILED.
